fixed overflow

--- a/true-app/src/App.css
+++ b/true-app/src/App.css
@@ -6,67 +6,39 @@ html{
   background-size: cover;
   background-repeat: no-repeat;
 }
-@media screen and (min-width: 500px) {
-  h1{
-    font-family: 'Alata', sans-serif;
-    font-size: 2vw;
-  }
-  p{
-    font-family: 'Alata', sans-serif;
-    font-size: 2vw;
-  }
-  .textbox .fromwho{
-    font-family: 'Alata', sans-serif;
-    font-size: 2vw;
-    color:var(--color4u);
-  }
-  
-  .textbox .themessage{
-    font-family: 'Alata', sans-serif;
-    font-size: 3vw;
-    color:var(--color4u);
-    
-  }
-  .textboxu .fromwho{
-    font-family: 'Alata', sans-serif;
-    font-size: 2vw;
-    color:var(--color4them);
-  }
-  
-  .textboxu .themessage{
-    font-family: 'Alata', sans-serif;
-    font-size: 3vw;
-    color:var(--color4them);
-    
-  }
-}
+
 .App {
-  margin: 0%;
+  
+  width:100vw;
   text-align: center;
- 
+ overflow-x: hidden;
 }
 .create{
-  display: inline-flex;
-  width:200vw;
-  
+ width: 200vw;
+ display: flex;
 }
 .dashboard{
-  width:100vw;
+  margin: 5vw;
+  width:45%;
   transition:1s ease;
+  
 }
 .newdash{
-  width:100vw;
-  transform: translateX(-100vw);
+  width:50%;
+  transform: translateX(-110%);
   transition:1s ease;
+  
 }
 .messagePanel{
   width:100vw;
   transition:1s ease;
+ 
 }
 .newpanel{
   width:100vw;
-  transform: translateX(-100vw);
+  transform: translateX(-100%);
   transition:1s ease;
+  
 }
 /*
 
@@ -132,7 +104,7 @@ p{
   justify-content: space-between;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0);
-  width: 90vw;
+  width: 100%;
   height:75vh;
   overflow-y: visible;
   overflow-x: hidden;
